tests/kulezi_tests/bad/dup_ident03.lat
class A {}

int main() {

}

class B {}

int main() {}